<resources>
    <string name="Common_Days_Friday">Friday</string>
    <string name="Common_Days_Monday">Monday</string>
    <string name="Common_Days_Saturday">Saturday</string>
    <string name="Common_Days_Sunday">Sunday</string>
    <string name="Common_Days_Thursday">Thursday</string>
    <string name="Common_Days_Tuesday">Tuesday</string>
    <string name="Common_Days_Wednesday">Wednesday</string>
    <string name="Menu_AboutUs">About Us</string>
    <string name="Menu_BookingConfiguration">Booking Configuration</string>
    <string name="Menu_CenterProfile">Center Profile</string>
    <string name="Menu_ClinicProfile">Clinic Profile</string>
    <string name="Menu_ContactUs">Contact Us</string>
    <string name="Menu_LabCenterProfile">Lab Center Profile</string>
    <string name="Menu_Logout">Logout</string>
    <string name="Menu_MedicalReports">Medical Reports</string>
    <string name="Menu_MyAppointments">My Appointments</string>
    <string name="Menu_OpticsProfile">Optics Profile</string>
    <string name="Menu_PharmacyProfile">Pharmacy Profile</string>
    <string name="Menu_PhysiotherapyProfile">Physiotherapy Profile</string>
    <string name="Menu_ScanCenterProfile">Scan Center Profile</string>
    <string name="Menu_Settings">Settings</string>
    <string name="Menu_Support">Support</string>
    <string name="Pages_AboutUs_DevelopedBy">Developed by Telepathic Co.</string>
    <string name="Pages_AboutUs_Title">Ensuring health for all.</string>
    <string name="Pages_Appointments_Checkin">Check-in</string>
    <string name="Pages_Appointments_FilterByDate">Filter By Date</string>
    <string name="Pages_Appointments_FilterByMemberId">Filter By Member Id</string>
    <string name="Pages_Appointments_Past">Past</string>
    <string name="Pages_Appointments_Report">Report</string>
    <string name="Pages_Appointments_Upcoming">Upcoming</string>
    <string name="Pages_BookingConfiguration_AppointmentTime">Appointment Time</string>
    <string name="Pages_BookingConfiguration_BookingSettings">Booking Settings</string>
    <string name="Pages_BookingConfiguration_BookingSystem">Booking System</string>
    <string name="Pages_BookingConfiguration_From">From</string>
    <string name="Pages_BookingConfiguration_Mins">mins</string>
    <string name="Pages_BookingConfiguration_PrecedenceAttendance">Precedence of attendance</string>
    <string name="Pages_BookingConfiguration_PrecedenceBooking">Precedence of booking</string>
    <string name="Pages_BookingConfiguration_QueueSystem">Queue System</string>
    <string name="Pages_BookingConfiguration_Schedule">Schedule</string>
    <string name="Pages_BookingConfiguration_Title">Booking Configuration</string>
    <string name="Pages_BookingConfiguration_To">To</string>
    <string name="Pages_BookingConfiguration_WaittingTime">Waiting Time</string>
    <string name="Pages_BookingConfiguration_WorkingHours">Working Hours</string>
    <string name="Pages_CancellationReasons_ConfirmCancellation">Confirm Cancellation</string>
    <string name="Pages_CancellationReasons_Header">Cancel Appointment</string>
    <string name="Pages_CancellationReasons_Other">Other</string>
    <string name="Pages_CancellationReasons_OtherText">Please explain your reason ...</string>
    <string name="Pages_CancellationReasons_SelectReason">Please select the reason of cancel appointment</string>
    <string name="Pages_CancellationReasons_SuccessCanceled">Canceled appointment successfully</string>
    <string name="Pages_CancellationReasons_Title">Reason for cancellation ?</string>
    <string name="Pages_CheckInAppointment_CheckedInSuccess">CheckedIn appointment successfully</string>
    <string name="Pages_CheckInAppointment_EnterCorrectMemberId">Enter correct member id</string>
    <string name="Pages_CheckInAppointment_EnterMemberId">Or enter member id</string>
    <string name="Pages_CheckInAppointment_MemberId">Member Id</string>
    <string name="Pages_CheckInAppointment_ScanQrCode">Scan QR Code</string>
    <string name="Pages_CheckOutAppointment_CheckedOutSuccess">Checked-out appointment successfully</string>
    <string name="Pages_CheckoutAppointment_Checkout">Check-out</string>
    <string name="Pages_CheckoutAppointment_EnterRequiredAmount">Please enter the required amount</string>
    <string name="Pages_CheckoutAppointment_Notes">Add new services and any others</string>
    <string name="Pages_CheckoutAppointment_RequiredAmount">Required Amount</string>
    <string name="Pages_CheckoutAppointment_Title">Current Appointment</string>
    <string name="Pages_ContactUs_AvailableFrom">Available from</string>
    <string name="Pages_ContactUs_ContactInfo">Contact Info</string>
    <string name="Pages_ContactUs_ContactNo">Contact No.</string>
    <string name="Pages_ContactUs_Message">Please write your message</string>
    <string name="Pages_ContactUs_Send">Send</string>
    <string name="Pages_ContactUs_SendUsMessage">Send us a message</string>
    <string name="Pages_ForgetPassword_Done">Done</string>
    <string name="Pages_ForgetPassword_DoneDesc">Password reset link sent to the following email address.</string>
    <string name="Pages_ForgetPassword_RequiredUsername">username or email address is required</string>
    <string name="Pages_ForgetPassword_Rest">Rest</string>
    <string name="Pages_ForgetPassword_RestPassword">Rest Password</string>
    <string name="Pages_ForgetPassword_UserName">Username or email address</string>
    <string name="Pages_ForgetPassword_WrongEmail">Wrong email ?</string>
    <string name="Pages_Home_AllAppointments">All Appointments</string>
    <string name="Pages_Home_AllReviews">All Reviews</string>
    <string name="Pages_Home_LatestReviews">Latest Reviews</string>
    <string name="Pages_Home_NextAppointments">Next Appointments</string>
    <string name="Pages_Home_Title">Home</string>
    <string name="Pages_JoinUs_Address">Address</string>
    <string name="Pages_JoinUs_AllAreas">All Areas</string>
    <string name="Pages_JoinUs_AllCities">All Cities</string>
    <string name="Pages_JoinUs_AllCountries">All Countries</string>
    <string name="Pages_JoinUs_AllProviderTypes">All Provider Types</string>
    <string name="Pages_JoinUs_EmailAddress">Email Address</string>
    <string name="Pages_JoinUs_InvalidEmail">Invalid email</string>
    <string name="Pages_JoinUs_JoinUs">Sign Up</string>
    <string name="Pages_JoinUs_PhoneNumber">Mobil No</string>
    <string name="Pages_JoinUs_ProviderName">Provider Name</string>
    <string name="Pages_JoinUs_RequiredArea">Select area</string>
    <string name="Pages_JoinUs_RequiredCity">Select City</string>
    <string name="Pages_JoinUs_RequiredCountry">Select Country</string>
    <string name="Pages_JoinUs_RequiredEmail">Email is required</string>
    <string name="Pages_JoinUs_RequiredPhoneNumber">Phone number is required</string>
    <string name="Pages_JoinUs_RequiredProviderName">Provider name is required</string>
    <string name="Pages_JoinUs_RequiredType">Provider type is required</string>
    <string name="Pages_JoinUs_SendRequestSuccessfully">Send your request successfully</string>
    <string name="Pages_JoinUs_SubmitRequest">Submit Request</string>
    <string name="Pages_Login_Error">username or email address or password is incorrect</string>
    <string name="Pages_Login_ForgetPassword">Forget Password ?</string>
    <string name="Pages_Login_JoinUs">Sign Up</string>
    <string name="Pages_Login_Login">Login</string>
    <string name="Pages_Login_Password">Password</string>
    <string name="Pages_Login_RequiredAddress">Address is required</string>
    <string name="Pages_Login_RequiredPassword">password is required</string>
    <string name="Pages_Login_RequiredUsername">username or email address is required</string>
    <string name="Pages_Login_UserName">Email or Mobile no</string>
    <string name="Pages_Offer_RequiredDescription">Offer description is required</string>
    <string name="Pages_Offer_RequiredDiscount">Offer discount is required</string>
    <string name="Pages_Offer_UpdateSuccessfully">Offer updated successfully</string>
    <string name="Pages_Offer_UploadImage">Upload Image</string>
    <string name="Pages_Profile_Address">Address</string>
    <string name="Pages_Profile_AllCategories">All Categories</string>
    <string name="Pages_Profile_AllServices">All Services</string>
    <string name="Pages_Profile_Area">Area</string>
    <string name="Pages_Profile_Categories">Categories</string>
    <string name="Pages_Profile_CenterName">Center Name</string>
    <string name="Pages_Profile_City">City</string>
    <string name="Pages_Profile_ClinicName">Clinic Name</string>
    <string name="Pages_Profile_Country">Country</string>
    <string name="Pages_Profile_Description">Description</string>
    <string name="Pages_Profile_DoctorSpeciality">Speciality</string>
    <string name="Pages_Profile_DoctorTitle">Title</string>
    <string name="Pages_Profile_Gallery">Gallery</string>
    <string name="Pages_Profile_MyClinic">My Clinic</string>
    <string name="Pages_Profile_OffDays">Off Days</string>
    <string name="Pages_Profile_Offer">Offer</string>
    <string name="Pages_Profile_Offers">Offers</string>
    <string name="Pages_Profile_PharmacyName">Pharmacy Name</string>
    <string name="Pages_Profile_Pics">Pics</string>
    <string name="Pages_Profile_Reviews">Reviews</string>
    <string name="Pages_Profile_Save">Save</string>
    <string name="Pages_Profile_Services">Services</string>
    <string name="Pages_Profile_Specializations">Specializations</string>
    <string name="Pages_Profile_UpdateProfileAvatarSuccessfully">Update profile avatar successfully</string>
    <string name="Pages_Profile_UpdateProfileDescriptionSuccessfully">Update profile description successfully</string>
    <string name="Pages_Profile_WorkingHours">Working Hours</string>
    <string name="Pages_Services_Discount">Discount</string>
    <string name="Pages_Services_Price">Price</string>
    <string name="Pages_Services_ServiceName">Service Name</string>
    <string name="Pages_Services_Title">Services</string>
    <string name="Pages_Services_Total">Total</string>
    <string name="Pages_Settings_Language">Language</string>
    <string name="Pages_login_loginSuccessfully">login successfully</string>
    <string name="app_name">Axon</string>
    <string name="common_Arabic">اللغة العربية</string>
    <string name="common_Cancel">Cancel</string>
    <string name="common_Close">Close</string>
    <string name="common_EGP">EGP</string>
    <string name="common_English">English</string>
    <string name="common_Error">An error occurred while connecting to the internet, please try again</string>
    <string name="common_Exit_Message">You need to exit from app click again now</string>
    <string name="common_Ok">Ok</string>
    <string name="common_Open">Open</string>
    <string name="common_Table_Empty">List is Empty</string>
    <string name="facebook_app_id">554802394887976</string>
    <string name="fb_login_protocol_scheme">fb554802394887976</string>
    <string name="Common_Skip">Skip</string>
    <string name="Common_Finish">Finish</string>
    <string name="Pages_Gallery_DeletedSuccessfully">delete image successfully</string>
    <string name="Pages_Gallery_AddedSuccessfully">added image successfully</string>
    <string name="Pages_Offer_DeletedSuccessfully">delete offer successfully</string>
    <string name="or_login_using">Or Login Using</string>
    <string name="Pages_JoinUs_FullName">Full Name</string>
    <string name="Pages_JoinUs_Bithdate">Birthdate</string>
    <string name="Pages_JoinUs_Next">Next</string>
    <string name="or_sign_up_using">Or Sign Up Using</string>
    <string name="Pages_JoinUs_Password">Password</string>
    <string name="Pages_JoinUs_Conf_Password">Confirm Password</string>
    <string name="Row_Physiotherapy_BookNow">Book Now</string>
    <string name="action_filter">filter</string>
</resources>