<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:scaleType="fitEnd"
        android:src="@drawable/splash_footer" />

    <LinearLayout
        style="@style/pages_login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">


        <com.axon1.axonapps.customviews.English_M_TextView
            style="@style/pages_login_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:text="@string/Pages_JoinUs_JoinUs"
            android:textColor="@color/color_blue" />

        <com.axon1.axonapps.customviews.English_EditText
            android:id="@+id/txtJoinUsEmail"
            style="@style/pages_login_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:hint="@string/Pages_JoinUs_EmailAddress"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textSize_medium" />

        <com.axon1.axonapps.customviews.English_EditText
            android:id="@+id/txtJoinUsPassword"
            style="@style/pages_login_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:hint="@string/Pages_JoinUs_Password"
            android:inputType="textPassword"
            android:textSize="@dimen/textSize_medium" />

        <com.axon1.axonapps.customviews.English_EditText
            android:id="@+id/txtJoinUsConfPassword"
            style="@style/pages_login_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:hint="@string/Pages_JoinUs_Conf_Password"
            android:inputType="textPassword"
            android:textSize="@dimen/textSize_medium" />
        <com.axon1.axonapps.customviews.English_Button
            android:id="@+id/btnSubmitRequest"
            style="@style/pages_login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip"
            android:text="@string/Pages_JoinUs_JoinUs" />
    </LinearLayout>
</FrameLayout>