<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:scaleType="fitEnd"
        android:src="@drawable/splash_footer" />

    <LinearLayout
        style="@style/pages_login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">


        <com.axon1.axonapps.customviews.English_M_TextView
            style="@style/pages_login_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:text="@string/Pages_JoinUs_JoinUs"
            android:textColor="@color/color_blue" />

        <com.axon1.axonapps.customviews.English_EditText
            android:id="@+id/txtJoinUsName"
            style="@style/pages_login_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:hint="@string/Pages_JoinUs_FullName"
            android:inputType="text"
            android:textSize="@dimen/textSize_medium" />

        <Spinner
            android:id="@+id/spinnerJoinUsProviderTypes"
            style="@style/pages_login_text"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20.0dip"
            android:entries="@array/gender"
            android:gravity="center" />

        <com.axon1.axonapps.customviews.English_L_TextView
            android:id="@+id/btnBirthdate"
            style="@style/pages_login_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip"
            android:text="@string/Pages_JoinUs_Bithdate" />



        <com.axon1.axonapps.customviews.English_EditText
            android:id="@+id/txtJoinUsPhoneNumber"
            style="@style/pages_login_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:hint="@string/Pages_JoinUs_PhoneNumber"
            android:inputType="phone"
            android:textSize="@dimen/textSize_medium" />
        <com.axon1.axonapps.customviews.English_M_TextView
            style="@style/pages_login_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up_using"
            android:textColor="@color/color_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnFacebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_social_border"
                android:padding="10dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/btnGoogle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_social_border"
                android:padding="10dp"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/btnTwitter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_social_border"
                android:padding="10dp"
                android:src="@drawable/twiter" />
        </LinearLayout>


        <com.axon1.axonapps.customviews.English_Button
            android:id="@+id/btnSubmitRequest"
            style="@style/pages_login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip"
            android:text="@string/Pages_JoinUs_Next" />
    </LinearLayout>
</FrameLayout>