<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:scaleType="fitEnd"
        android:src="@drawable/splash_footer" />

    <LinearLayout
        style="@style/pages_login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.axon1.axonapps.customviews.English_B_TextView
            style="@style/pages_login_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pages_ForgetPassword_DoneDesc" />

        <com.axon1.axonapps.customviews.English_M_TextView
            android:id="@+id/lblForgetDoneEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/textSize_medium" />

        <com.axon1.axonapps.customviews.English_Button
            android:id="@+id/btnForgetDone"
            style="@style/pages_login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip"
            android:text="@string/Pages_ForgetPassword_Done" />

        <com.axon1.axonapps.customviews.English_L_TextView
            android:id="@+id/lblWrongEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:gravity="center"
            android:text="@string/Pages_ForgetPassword_WrongEmail"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/textSize_small" />
    </LinearLayout>
</FrameLayout>